	Add descriptions of these properties.
	Add signal return value descriptions as needed.

	* pygtk-gtktreeviewcolumn.xml (set_expand) (get_expand)
	(cell_get_position)
	Add description of these PyGTK 2.4 methods.
	(focus_cell) Add description of this PyGTK 2.2 method.
	("expand") Add description of this GTK+ 2.4 signal.

	* pygtk-gtkuimanager.xml Add.

2004-04-18  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreemodelfilter.xml Add.

	* pygtk-gtktreemodelsort.xml (iter_is_valid) Add description of
	PyGTK 2.2 method.

	* pygtk-gtktreerowreference.xml Add.

	* pygtk-gtktreeselection.xml (get_selected_rows)
	(count_selected_rows) (unselect_range) Add new methods for PyGTK 2.2

	* pygtk-gtktreestore.xml (iter_is_valid) (reorder) (swap)
	(move_after) (move_before) Add descriptions for these PyGTK 2.2
	methods.

2004-04-17  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktoolbutton.xml Add.

	* pygtk-gtktoolitem.xml Add.

	* pygtk-gtktoolitem.xml (set_tooltip) tip_text and tip_private can
	default to None.

	* pygtk-gtkwindow.xml (tooltips_get_info_from_tip_window) Add 
	description of PyGTK 2.4 method.

	* pygtk-gtktreeiter.xml Add class info for TreeIter creation methods.

	* pygtk_gtktreemodel.xml (filter_new) Add description of new 
	PyGTK 2.4 method.

2004-04-16  John Finlay  <finlay@moeraki.com>

	* pygtk-gtksocket.xml ("plug-removed") Add return value description
	for this signal handler.

	* pygtk-gtkspinbutton.xml ("input") ("output") Add return value
	descriptions. Reorder property descriptions.

	* pygtk-gtkspinbutton.xml ("input") ("output") Fix typos.

	* pygtk-gtkstatusbar.xml ("has-resize-grip") Add GTK+ 2.4 property
	description.

	* pygtk-gtk-functions.xml (gtk.draw_insertion_cursor) Add.

	* pygtk-gtktable.xml (attach_defaults) Remove - it's deprecated.
	Reorder property descriptions.

	* pygtk-gtktextbuffer.xml (create_tag) Remove keyword role.
	(select_range) (add_selection_clipboard) (remove_selection_clipboard)