@@ -44,17 +44,30 @@ linkend="constructor-gtkvbuttonbox">gtk.VButtonBox</link></methodname>
 linkend="class-gtkvbuttonbox"><classname>gtk.VButtonBox</classname></link>
 is a container subclassed from <link
 linkend="class-gtkbuttonbox"><classname>gtk.ButtonBox</classname></link>
-that is optimised for the vertical layout of buttons. The gtkVButtonBox
+that is optimised for the vertical layout of buttons. The <link
+linkend="class-gtkvbuttonbox"><classname>gtk.VButtonBox</classname></link>
 helps provide a consistent layout of buttons in an application by supplying
 default values of spacing, padding and layout style (see the <link
 linkend="class-gtkbuttonbox"><classname>gtk.ButtonBox</classname></link>
 reference for more detail). Buttons are packed into a <link
 linkend="class-gtkvbuttonbox"><classname>gtk.VButtonBox</classname></link>
 using the <link
-linkend="method-gtkbox--pack-start"><methodname>pack_start</methodname>()</link> 
+linkend="method-gtkcontainer--add"><methodname>gtk.Container.add</methodname>()</link>)
+method. The <link
+linkend="method-gtkbox--pack-start"><methodname>pack_start</methodname>()</link>
 and <link
 linkend="method-gtkbox--pack-end"><methodname>pack_end</methodname>()</link>
-methods.</para>
+methods can also be used but they work just like the <link
+linkend="method-gtkcontainer--add"><methodname>gtk.Container.add</methodname>()</link>)
+method i.e. they pack the button in a way that depends on the current layout
+style and on whether the button has had the <link
+linkend="method-gtkbuttonbox--set-child-secondary"><methodname>gtk.ButtonBox.set_child_secondary</methodname>()</link>
+method called on it. The spacing between buttons can be set with the <link
+linkend="method-gtkbox--set-spacing"><methodname>gtk.Box.set_spacing</methodname>()</link>
+method. The arrangement and layout of the buttons can be changed with the
+<link
+linkend="method-gtkbuttonbox--set-layout"><methodname>gtk.ButtonBox.set_layout</methodname>()</link>
+method.</para>
 
   </refsect1>
 
