@@ -15,6 +15,8 @@
 
 	* pygtk-gtkuimanager.xml Add.
 
+	* pygtk-gtkvbuttonbox.xml Tweak description.
+
 2004-04-18  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktreemodelfilter.xml Add.
